// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default rendered components can use contextLines 1`] = `
"Snapshot Diff:
- <NestedComponent test=\\"say\\" />
+ <NestedComponent test=\\"my name\\" />

@@ -4,1 +4,1 @@
-     say
+     my name"
`;

exports[`default rendered components diffs components 1`] = `
"Snapshot Diff:
- <NestedComponent test=\\"say\\" />
+ <NestedComponent test=\\"my name\\" />

@@ -1,9 +1,9 @@
  <div>
    <span>
      Hello World - 
-     say
+     my name
    </span>
    <div>
      I have value 
      1234
    </div>"
`;

exports[`enzyme shallow rendered components can use contextLines 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,1 +4,1 @@
-     say
+     my name"
`;

exports[`enzyme shallow rendered components diffs components 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <div>
    <span>
      Hello World - 
-     say
+     my name
    </span>
    <Component
      value={1234}
    />
  </div>"
`;

exports[`react test-renderer shallow rendered components can use contextLines 1`] = `
"Snapshot Diff:
- <div><span>Hello World - say</span><Component value={1234} /></div>
+ <div><span>Hello World - my name</span><Component value={1234} /></div>

@@ -4,1 +4,1 @@
-     say
+     my name"
`;

exports[`react test-renderer shallow rendered components diffs components 1`] = `
"Snapshot Diff:
- <div><span>Hello World - say</span><Component value={1234} /></div>
+ <div><span>Hello World - my name</span><Component value={1234} /></div>

@@ -1,9 +1,9 @@
  <div>
    <span>
      Hello World - 
-     say
+     my name
    </span>
    <div>
      I have value 
      1234
    </div>"
`;

exports[`values which are not components can use contextLines 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,1 +3,1 @@
-   \\"hello\\": \\"world\\",
+   \\"hello\\": \\"there\\","
`;

exports[`values which are not components diffs objects 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"foo\\": \\"bar\\",
-   \\"hello\\": \\"world\\",
+   \\"hello\\": \\"there\\",
    \\"testing\\": 123,
  }"
`;
